operator/generated/v1_namespace_seldon-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: seldon
    app.kubernetes.io/instance: seldon1
    app.kubernetes.io/name: seldon
    app.kubernetes.io/version: v0.5
    control-plane: seldon-controller-manager
  name: seldon-system
